[gd_scene load_steps=15 format=4 uid="uid://cb8n55t7m8aen"]

[ext_resource type="TileSet" uid="uid://dbtah512jouq3" path="res://assets/grass_tileset.tres" id="1_6kitf"]
[ext_resource type="Script" path="res://scenes/game/scripts/game_manager.gd" id="2_dwkqj"]
[ext_resource type="PackedScene" uid="uid://dpsy8x3eejp24" path="res://entities/critters/bnnuy/bnnuy.tscn" id="2_few38"]
[ext_resource type="PackedScene" uid="uid://cdnogoadfp5bq" path="res://scenes/end_cutscene/end_cutscene.tscn" id="4_e4tsy"]
[ext_resource type="PackedScene" uid="uid://j81avxh4ked" path="res://scenes/game/wrapping_manager.tscn" id="5_gxr23"]
[ext_resource type="PackedScene" uid="uid://il0rnprlgux" path="res://scenes/game/shooting_manager.tscn" id="6_yblc6"]
[ext_resource type="Script" path="res://scenes/game/scripts/spawn_manager.gd" id="8_napbt"]
[ext_resource type="Script" path="res://scenes/game/scripts/time_manager.gd" id="14_3vvdi"]
[ext_resource type="AudioStream" uid="uid://bxv4ckjoje2y4" path="res://music/bossa_bunny.ogg" id="14_046pm"]
[ext_resource type="Script" path="res://scenes/game/scripts/game_music_player.gd" id="16_ugsil"]
[ext_resource type="Script" path="res://scenes/game/scripts/game_ui.gd" id="18_rbnpt"]
[ext_resource type="Resource" uid="uid://dapiha21odvjo" path="res://sfx/time_warning.tres" id="19_bv10b"]

[sub_resource type="LabelSettings" id="LabelSettings_8ode4"]
font_size = 5
font_color = Color(1, 0.945098, 0.909804, 1)
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_hkqkt"]
font_size = 5
font_color = Color(1, 0.945098, 0.909804, 1)
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="GameScene" type="Node2D"]

[node name="Managers" type="Node" parent="."]

[node name="GameManager" type="Node" parent="Managers"]
script = ExtResource("2_dwkqj")
end_cutscene_scene = ExtResource("4_e4tsy")

[node name="SpawnManager" type="Node" parent="Managers"]
script = ExtResource("8_napbt")
critter_scene = ExtResource("2_few38")

[node name="WrappingManager" parent="Managers" instance=ExtResource("5_gxr23")]

[node name="ShootingManager" parent="Managers" instance=ExtResource("6_yblc6")]

[node name="TimeManager" type="Node" parent="Managers"]
script = ExtResource("14_3vvdi")
round_time = 180.0

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_046pm")
volume_db = -5.0
autoplay = true
bus = &"Music"
script = ExtResource("16_ugsil")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAATAA4AAgADAAAAAAATAA0AAgADAAAAAAATAAwAAgABAAAAAAATAAsAAgABAAAAAAATAAoAAgABAAAAAAATAAkAAgAAAAAAAAATAAgAAgACAAAAAAATAAcAAgABAAAAAAATAAYAAgACAAAAAAATAAUAAgAAAAAAAAATAAQAAgACAAAAAAATAAMAAgACAAAAAAATAAIAAgAAAAAAAAATAAEAAgABAAAAAAATAAAAAgADAAAAAAASAA4AAgAAAAAAAAASAA0AAgADAAAAAAASAAwAAgACAAAAAAASAAsAAgAAAAAAAAASAAoAAgADAAAAAAASAAkAAgACAAAAAAASAAgAAgAAAAAAAAASAAcAAgADAAAAAAASAAYAAgADAAAAAAASAAUAAgAAAAAAAAASAAQAAgADAAAAAAASAAMAAgABAAAAAAASAAIAAgABAAAAAAASAAEAAgACAAAAAAASAAAAAgAAAAAAAAARAA4AAgABAAAAAAARAA0AAgABAAAAAAARAAwAAgAAAAAAAAARAAsAAgACAAAAAAARAAoAAgACAAAAAAARAAkAAgADAAAAAAARAAgAAgABAAAAAAARAAcAAgADAAAAAAARAAYAAgADAAAAAAARAAUAAgAAAAAAAAARAAQAAgAAAAAAAAARAAMAAgACAAAAAAARAAIAAgAAAAAAAAARAAEAAgAAAAAAAAARAAAAAgADAAAAAAAQAA4AAgABAAAAAAAQAA0AAgABAAAAAAAQAAwAAgACAAAAAAAQAAsAAgABAAAAAAAQAAoAAgACAAAAAAAQAAkAAgABAAAAAAAQAAgAAgACAAAAAAAQAAcAAgADAAAAAAAQAAYAAgABAAAAAAAQAAUAAgADAAAAAAAQAAQAAgAAAAAAAAAQAAMAAgAAAAAAAAAQAAIAAgABAAAAAAAQAAEAAgACAAAAAAAQAAAAAgABAAAAAAAPAA4AAgAAAAAAAAAPAA0AAgACAAAAAAAPAAwAAgADAAAAAAAPAAsAAgABAAAAAAAPAAoAAgAAAAAAAAAPAAkAAgACAAAAAAAPAAgAAgABAAAAAAAPAAcAAgAAAAAAAAAPAAYAAgACAAAAAAAPAAUAAgACAAAAAAAPAAQAAgACAAAAAAAPAAMAAgACAAAAAAAPAAIAAgAAAAAAAAAPAAEAAgACAAAAAAAPAAAAAgACAAAAAAAOAA4AAgACAAAAAAAOAA0AAgAAAAAAAAAOAAwAAgADAAAAAAAOAAsAAgADAAAAAAAOAAoAAgAAAAAAAAAOAAkAAgAAAAAAAAAOAAgAAgADAAAAAAAOAAcAAgAAAAAAAAAOAAYAAgADAAAAAAAOAAUAAgABAAAAAAAOAAQAAgACAAAAAAAOAAMAAgABAAAAAAAOAAIAAgADAAAAAAAOAAEAAgABAAAAAAAOAAAAAgABAAAAAAANAA4AAgABAAAAAAANAA0AAgABAAAAAAANAAwAAgABAAAAAAANAAsAAgACAAAAAAANAAoAAgACAAAAAAANAAkAAgAAAAAAAAANAAgAAgADAAAAAAANAAcAAgACAAAAAAANAAYAAgACAAAAAAANAAUAAgAAAAAAAAANAAQAAgAAAAAAAAANAAMAAgAAAAAAAAANAAIAAgADAAAAAAANAAEAAgACAAAAAAANAAAAAgADAAAAAAAMAA4AAgABAAAAAAAMAA0AAgABAAAAAAAMAAwAAgABAAAAAAAMAAsAAgACAAAAAAAMAAoAAgABAAAAAAAMAAkAAgADAAAAAAAMAAgAAgABAAAAAAAMAAcAAgAAAAAAAAAMAAYAAgACAAAAAAAMAAUAAgADAAAAAAAMAAQAAgABAAAAAAAMAAMAAgABAAAAAAAMAAIAAgABAAAAAAAMAAEAAgADAAAAAAAMAAAAAgACAAAAAAALAA4AAgACAAAAAAALAA0AAgACAAAAAAALAAwAAgACAAAAAAALAAsAAgAAAAAAAAALAAoAAgABAAAAAAALAAkAAgABAAAAAAALAAgAAgAAAAAAAAALAAcAAgABAAAAAAALAAYAAgACAAAAAAALAAUAAgADAAAAAAALAAQAAgABAAAAAAALAAMAAgABAAAAAAALAAIAAgABAAAAAAALAAEAAgAAAAAAAAALAAAAAgAAAAAAAAAKAA4AAgADAAAAAAAKAA0AAgABAAAAAAAKAAwAAgAAAAAAAAAKAAsAAgADAAAAAAAKAAoAAgACAAAAAAAKAAkAAgACAAAAAAAKAAgAAgADAAAAAAAKAAcAAgADAAAAAAAKAAYAAgAAAAAAAAAKAAUAAgAAAAAAAAAKAAQAAgADAAAAAAAKAAMAAgAAAAAAAAAKAAIAAgACAAAAAAAKAAEAAgACAAAAAAAKAAAAAgAAAAAAAAAJAA4AAgAAAAAAAAAJAA0AAgAAAAAAAAAJAAwAAgADAAAAAAAJAAsAAgACAAAAAAAJAAoAAgADAAAAAAAJAAkAAgAAAAAAAAAJAAgAAgAAAAAAAAAJAAcAAgABAAAAAAAJAAYAAgADAAAAAAAJAAUAAgADAAAAAAAJAAQAAgADAAAAAAAJAAMAAgABAAAAAAAJAAIAAgACAAAAAAAJAAEAAgACAAAAAAAJAAAAAgAAAAAAAAAIAA4AAgAAAAAAAAAIAA0AAgAAAAAAAAAIAAwAAgABAAAAAAAIAAsAAgADAAAAAAAIAAoAAgAAAAAAAAAIAAkAAgABAAAAAAAIAAgAAgADAAAAAAAIAAcAAgABAAAAAAAIAAYAAgAAAAAAAAAIAAUAAgABAAAAAAAIAAQAAgABAAAAAAAIAAMAAgACAAAAAAAIAAIAAgABAAAAAAAIAAEAAgAAAAAAAAAIAAAAAgACAAAAAAAHAA4AAgACAAAAAAAHAA0AAgACAAAAAAAHAAwAAgAAAAAAAAAHAAsAAgABAAAAAAAHAAoAAgAAAAAAAAAHAAkAAgAAAAAAAAAHAAgAAgABAAAAAAAHAAcAAgACAAAAAAAHAAYAAgADAAAAAAAHAAUAAgAAAAAAAAAHAAQAAgAAAAAAAAAHAAMAAgAAAAAAAAAHAAIAAgADAAAAAAAHAAEAAgABAAAAAAAHAAAAAgABAAAAAAAGAA4AAgABAAAAAAAGAA0AAgABAAAAAAAGAAwAAgADAAAAAAAGAAsAAgADAAAAAAAGAAoAAgAAAAAAAAAGAAkAAgADAAAAAAAGAAgAAgABAAAAAAAGAAcAAgAAAAAAAAAGAAYAAgACAAAAAAAGAAUAAgABAAAAAAAGAAQAAgACAAAAAAAGAAMAAgADAAAAAAAGAAIAAgACAAAAAAAGAAEAAgADAAAAAAAGAAAAAgABAAAAAAAFAA4AAgADAAAAAAAFAA0AAgACAAAAAAAFAAwAAgADAAAAAAAFAAsAAgACAAAAAAAFAAoAAgAAAAAAAAAFAAkAAgADAAAAAAAFAAgAAgAAAAAAAAAFAAcAAgABAAAAAAAFAAYAAgABAAAAAAAFAAUAAgADAAAAAAAFAAQAAgAAAAAAAAAFAAMAAgAAAAAAAAAFAAIAAgABAAAAAAAFAAEAAgAAAAAAAAAFAAAAAgADAAAAAAAEAA4AAgACAAAAAAAEAA0AAgACAAAAAAAEAAwAAgACAAAAAAAEAAsAAgADAAAAAAAEAAoAAgACAAAAAAAEAAkAAgABAAAAAAAEAAgAAgADAAAAAAAEAAcAAgADAAAAAAAEAAYAAgABAAAAAAAEAAUAAgABAAAAAAAEAAQAAgACAAAAAAAEAAMAAgADAAAAAAAEAAIAAgACAAAAAAAEAAEAAgACAAAAAAAEAAAAAgACAAAAAAADAA4AAgAAAAAAAAADAA0AAgAAAAAAAAADAAwAAgAAAAAAAAADAAsAAgABAAAAAAADAAoAAgACAAAAAAADAAkAAgADAAAAAAADAAgAAgABAAAAAAADAAcAAgADAAAAAAADAAYAAgABAAAAAAADAAUAAgABAAAAAAADAAQAAgADAAAAAAADAAMAAgACAAAAAAADAAIAAgADAAAAAAADAAEAAgAAAAAAAAADAAAAAgABAAAAAAACAA4AAgADAAAAAAACAA0AAgAAAAAAAAACAAwAAgAAAAAAAAACAAsAAgAAAAAAAAACAAoAAgAAAAAAAAACAAkAAgABAAAAAAACAAgAAgACAAAAAAACAAcAAgABAAAAAAACAAYAAgAAAAAAAAACAAUAAgADAAAAAAACAAQAAgAAAAAAAAACAAMAAgADAAAAAAACAAIAAgACAAAAAAACAAEAAgADAAAAAAACAAAAAgACAAAAAAABAA4AAgAAAAAAAAABAA0AAgADAAAAAAABAAwAAgABAAAAAAABAAsAAgAAAAAAAAABAAoAAgAAAAAAAAABAAkAAgADAAAAAAABAAgAAgABAAAAAAABAAcAAgACAAAAAAABAAYAAgACAAAAAAABAAUAAgABAAAAAAABAAQAAgABAAAAAAABAAMAAgADAAAAAAABAAIAAgABAAAAAAABAAEAAgADAAAAAAABAAAAAgACAAAAAAAAAA4AAgAAAAAAAAAAAA0AAgADAAAAAAAAAAwAAgAAAAAAAAAAAAsAAgACAAAAAAAAAAoAAgABAAAAAAAAAAkAAgACAAAAAAAAAAgAAgAAAAAAAAAAAAcAAgAAAAAAAAAAAAYAAgADAAAAAAAAAAUAAgADAAAAAAAAAAQAAgABAAAAAAAAAAMAAgADAAAAAAAAAAIAAgAAAAAAAAAAAAEAAgAAAAAAAAAAAAAAAgADAAAAAAA=")
tile_set = ExtResource("1_6kitf")

[node name="Bnnuy2" parent="." instance=ExtResource("2_few38")]
position = Vector2(334, 9)

[node name="Bnnuy3" parent="." instance=ExtResource("2_few38")]
position = Vector2(-25, 229)

[node name="GameUI" type="CanvasLayer" parent="."]
script = ExtResource("18_rbnpt")
warning_sound = ExtResource("19_bv10b")

[node name="TimeLabel" type="Label" parent="GameUI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 10.0
offset_right = 20.0
offset_bottom = 26.0
grow_horizontal = 2
pivot_offset = Vector2(24, 0)
theme_override_colors/font_color = Color(1, 0.945098, 0.909804, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "120"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="GameUI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -33.0
offset_right = 56.0
offset_bottom = -8.0
grow_vertical = 0
alignment = 2

[node name="CaughtLabel" type="Label" parent="GameUI/VBoxContainer"]
layout_mode = 2
text = "Caught: 0"
label_settings = SubResource("LabelSettings_8ode4")

[node name="EscapedLabel" type="Label" parent="GameUI/VBoxContainer"]
layout_mode = 2
text = "Escaped: 0"
label_settings = SubResource("LabelSettings_hkqkt")
